# file-selector

./: README.md  pyproject.toml
file_selector/: __main__.py  git_differ.py
tests/: test_file_selector.py
