[tool.poetry]
name = "file-selector"
version = "0.1.0"
description = ""
authors = ["idatsy <stefan@ranvier.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyperclip = "^1.9.0"
ruff = "^0.8.3"

[tool.poetry.scripts]
file-selector = "file_selector.__main__:run"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
